@@ -10,32 +10,36 @@ import fr.frinn.custommachinery.common.network.NetworkManager;
 import fr.frinn.custommachinery.common.network.SStructureCreatorPacket;
 import fr.frinn.custommachinery.common.util.Codecs;
 import fr.frinn.custommachinery.common.util.PartialBlockState;
-import mcp.MethodsReturnNonnullByDefault;
-import net.minecraft.block.BlockState;
-import net.minecraft.client.util.ITooltipFlag;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.entity.player.ServerPlayerEntity;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.ItemUseContext;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.state.properties.BlockStateProperties;
-import net.minecraft.util.*;
-import net.minecraft.util.math.AxisAlignedBB;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.TranslationTextComponent;
-import net.minecraft.world.World;
-import net.minecraftforge.fml.network.PacketDistributor;
+import net.minecraft.Util;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.InteractionResult;
+import net.minecraft.world.InteractionResultHolder;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.TooltipFlag;
+import net.minecraft.world.item.context.UseOnContext;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import net.minecraft.world.phys.AABB;
+import net.minecraftforge.network.PacketDistributor;
 
 import javax.annotation.Nullable;
-import javax.annotation.ParametersAreNonnullByDefault;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
-@MethodsReturnNonnullByDefault
-@ParametersAreNonnullByDefault
 public class StructureCreatorItem extends Item {
 
     private static final Codec<List<List<String>>> PATTERN_CODEC = Codec.STRING.listOf().listOf();
@@ -46,60 +50,60 @@ public class StructureCreatorItem extends Item {
     }
 
     @Override
-    public boolean hasEffect(ItemStack stack) {
+    public boolean isFoil(ItemStack stack) {
         return true;
     }
 
     @Override
-    public ActionResultType onItemUse(ItemUseContext context) {
+    public InteractionResult useOn(UseOnContext context) {
         if(context.getPlayer() == null)
-            return ActionResultType.FAIL;
-        if(context.getWorld().isRemote())
-            return super.onItemUse(context);
-        BlockPos pos = context.getPos();
-        BlockState state = context.getWorld().getBlockState(pos);
-        ItemStack stack = context.getItem();
-        if(state.matchesBlock(Registration.CUSTOM_MACHINE_BLOCK.get())) {
-            finishStructure(stack, pos, state.get(BlockStateProperties.HORIZONTAL_FACING), context.getPlayer());
-            return ActionResultType.SUCCESS;
+            return InteractionResult.FAIL;
+        if(context.getLevel().isClientSide())
+            return super.useOn(context);
+        BlockPos pos = context.getClickedPos();
+        BlockState state = context.getLevel().getBlockState(pos);
+        ItemStack stack = context.getItemInHand();
+        if(state.is(Registration.CUSTOM_MACHINE_BLOCK.get())) {
+            finishStructure(stack, pos, state.getValue(BlockStateProperties.HORIZONTAL_FACING), context.getPlayer());
+            return InteractionResult.SUCCESS;
         } else if(!getSelectedBlocks(stack).contains(pos)) {
             addSelectedBlock(stack, pos);
-            return ActionResultType.SUCCESS;
+            return InteractionResult.SUCCESS;
         } else if(getSelectedBlocks(stack).contains(pos)){
             removeSelectedBlock(stack, pos);
-            return ActionResultType.SUCCESS;
+            return InteractionResult.SUCCESS;
         }
-        return super.onItemUse(context);
+        return super.useOn(context);
     }
 
     public static List<BlockPos> getSelectedBlocks(ItemStack stack) {
-        return Arrays.stream(stack.getOrCreateChildTag(CustomMachinery.MODID).getLongArray("blocks")).mapToObj(BlockPos::fromLong).collect(Collectors.toList());
+        return Arrays.stream(stack.getOrCreateTagElement(CustomMachinery.MODID).getLongArray("blocks")).mapToObj(BlockPos::of).toList();
     }
 
     public static void addSelectedBlock(ItemStack stack, BlockPos pos) {
-        long packed = pos.toLong();
-        long[] posList = stack.getOrCreateChildTag(CustomMachinery.MODID).getLongArray("blocks");
+        long packed = pos.asLong();
+        long[] posList = stack.getOrCreateTagElement(CustomMachinery.MODID).getLongArray("blocks");
         long[] newList = new long[posList.length + 1];
         System.arraycopy(posList, 0, newList, 0, posList.length);
         newList[posList.length] = packed;
-        stack.getOrCreateChildTag(CustomMachinery.MODID).putLongArray("blocks", newList);
+        stack.getOrCreateTagElement(CustomMachinery.MODID).putLongArray("blocks", newList);
     }
 
     public static void removeSelectedBlock(ItemStack stack, BlockPos pos) {
-        long packed = pos.toLong();
-        long[] posList = stack.getOrCreateChildTag(CustomMachinery.MODID).getLongArray("blocks");
+        long packed = pos.asLong();
+        long[] posList = stack.getOrCreateTagElement(CustomMachinery.MODID).getLongArray("blocks");
         long[] newList = Arrays.stream(posList).filter(l -> l != packed).toArray();
-        stack.getOrCreateChildTag(CustomMachinery.MODID).putLongArray("blocks", newList);
+        stack.getOrCreateTagElement(CustomMachinery.MODID).putLongArray("blocks", newList);
     }
 
-    private void finishStructure(ItemStack stack, BlockPos machinePos, Direction machineFacing, PlayerEntity player) {
+    private void finishStructure(ItemStack stack, BlockPos machinePos, Direction machineFacing, Player player) {
         List<BlockPos> blocks = getSelectedBlocks(stack);
         blocks.add(machinePos);
         if(blocks.size() <= 1) {
-            player.sendMessage(new TranslationTextComponent("custommachinery.structure_creator.no_blocks"), Util.DUMMY_UUID);
+            player.sendMessage(new TranslatableComponent("custommachinery.structure_creator.no_blocks"), Util.NIL_UUID);
             return;
         }
-        World world = player.world;
+        Level world = player.level;
 
         PartialBlockState[][][] states = getStructureArray(blocks, machineFacing, world);
         HashBiMap<Character, PartialBlockState> keys = HashBiMap.create();
@@ -107,7 +111,7 @@ public class StructureCreatorItem extends Item {
         Arrays.stream(states)
                 .flatMap(Arrays::stream)
                 .flatMap(Arrays::stream)
-                .filter(state -> !state.getBlockState().matchesBlock(Registration.CUSTOM_MACHINE_BLOCK.get()) && state != PartialBlockState.ANY)
+                .filter(state -> !state.getBlockState().is(Registration.CUSTOM_MACHINE_BLOCK.get()) && state != PartialBlockState.ANY)
                 .distinct()
                 .forEach(state -> {
                     if(charIndex.get() == 109) charIndex.incrementAndGet(); //Avoid 'm' as it's reserved for the machine.
@@ -122,7 +126,7 @@ public class StructureCreatorItem extends Item {
                 for (int k = 0; k < states[i][j].length; k++) {
                     PartialBlockState partial = states[i][j][k];
                     char key;
-                    if(partial.getBlockState().matchesBlock(Registration.CUSTOM_MACHINE_BLOCK.get()))
+                    if(partial.getBlockState().is(Registration.CUSTOM_MACHINE_BLOCK.get()))
                         key = 'm';
                     else if(partial == PartialBlockState.ANY)
                         key = ' ';
@@ -138,10 +142,10 @@ public class StructureCreatorItem extends Item {
         }
         JsonElement keysJson = KEYS_CODEC.encodeStart(JsonOps.INSTANCE, keys).result().orElseThrow(IllegalStateException::new);
         JsonElement patternJson = PATTERN_CODEC.encodeStart(JsonOps.INSTANCE, pattern).result().orElseThrow(IllegalStateException::new);
-        NetworkManager.CHANNEL.send(PacketDistributor.PLAYER.with(() -> (ServerPlayerEntity)player), new SStructureCreatorPacket(keysJson, patternJson));
+        NetworkManager.CHANNEL.send(PacketDistributor.PLAYER.with(() -> (ServerPlayer)player), new SStructureCreatorPacket(keysJson, patternJson));
     }
 
-    private PartialBlockState[][][] getStructureArray(List<BlockPos> blocks, Direction machineFacing, World world) {
+    private PartialBlockState[][][] getStructureArray(List<BlockPos> blocks, Direction machineFacing, Level world) {
         int minX = blocks.stream().mapToInt(BlockPos::getX).min().orElseThrow(IllegalStateException::new);
         int maxX = blocks.stream().mapToInt(BlockPos::getX).max().orElseThrow(IllegalStateException::new);
         int minY = blocks.stream().mapToInt(BlockPos::getY).min().orElseThrow(IllegalStateException::new);
@@ -153,9 +157,9 @@ public class StructureCreatorItem extends Item {
             states = new PartialBlockState[maxY - minY + 1][maxX - minX + 1][maxZ - minZ + 1];
         else
             states = new PartialBlockState[maxY - minY + 1][maxZ - minZ + 1][maxX - minX + 1];
-        AxisAlignedBB box = new AxisAlignedBB(minX, minY, minZ, maxX, maxY, maxZ);
+        AABB box = new AABB(minX, minY, minZ, maxX, maxY, maxZ);
         Map<BlockState, PartialBlockState> cache = new HashMap<>();
-        BlockPos.getAllInBox(box).forEach(p -> {
+        BlockPos.betweenClosedStream(box).forEach(p -> {
             BlockState state = world.getBlockState(p);
             PartialBlockState partial;
             if(!blocks.contains(p))
@@ -163,41 +167,33 @@ public class StructureCreatorItem extends Item {
             else if(cache.containsKey(state))
                 partial = cache.get(state);
             else {
-                partial = new PartialBlockState(state, Lists.newArrayList(state.getProperties()), Optional.ofNullable(world.getTileEntity(p)).map(tile -> tile.write(new CompoundNBT())).orElse(null));
+                partial = new PartialBlockState(state, Lists.newArrayList(state.getProperties()), Optional.ofNullable(world.getBlockEntity(p)).map(BlockEntity::saveWithFullMetadata).orElse(null));
                 cache.put(state, partial);
             }
             //TODO: change "p.getY() - minY" to "maxY - p.getY()" in 1.18 to make the pattern from top to bottom instead of from bottom to top (current)
             switch (machineFacing) {
-                case WEST:
-                    states[p.getY() - minY][p.getX() - minX][p.getZ() - minZ] = partial;
-                    break;
-                case EAST:
-                    states[p.getY() - minY][maxX - p.getX()][maxZ - p.getZ()] = partial;
-                    break;
-                case SOUTH:
-                    states[p.getY() - minY][p.getZ() - minZ][p.getX() - minX] = partial;
-                    break;
-                case NORTH:
-                    states[p.getY() - minY][maxZ - p.getZ()][maxX - p.getX()] = partial;
-                    break;
+                case WEST -> states[p.getY() - minY][p.getX() - minX][p.getZ() - minZ] = partial;
+                case EAST -> states[p.getY() - minY][maxX - p.getX()][maxZ - p.getZ()] = partial;
+                case SOUTH -> states[p.getY() - minY][p.getZ() - minZ][p.getX() - minX] = partial;
+                case NORTH -> states[p.getY() - minY][maxZ - p.getZ()][maxX - p.getX()] = partial;
             }
         });
         return states;
     }
 
     @Override
-    public void addInformation(ItemStack stack, @Nullable World world, List<ITextComponent> tooltip, ITooltipFlag flag) {
-        tooltip.add(new TranslationTextComponent("custommachinery.structure_creator.amount", getSelectedBlocks(stack).size()));
-        tooltip.add(new TranslationTextComponent("custommachinery.structure_creator.reset"));
+    public void appendHoverText(ItemStack stack, @Nullable Level world, List<Component> tooltip, TooltipFlag flag) {
+        tooltip.add(new TranslatableComponent("custommachinery.structure_creator.amount", getSelectedBlocks(stack).size()));
+        tooltip.add(new TranslatableComponent("custommachinery.structure_creator.reset"));
     }
 
     @Override
-    public ActionResult<ItemStack> onItemRightClick(World world, PlayerEntity player, Hand hand) {
-        if(player.isCrouching() && player.getHeldItem(hand).getItem() == this) {
-            ItemStack stack = player.getHeldItem(hand);
-            stack.getOrCreateChildTag(CustomMachinery.MODID).remove("blocks");
-            return ActionResult.resultSuccess(stack);
+    public InteractionResultHolder<ItemStack> use(Level world, Player player, InteractionHand hand) {
+        if(player.isCrouching() && player.getItemInHand(hand).getItem() == this) {
+            ItemStack stack = player.getItemInHand(hand);
+            stack.getOrCreateTagElement(CustomMachinery.MODID).remove("blocks");
+            return InteractionResultHolder.success(stack);
         }
-        return super.onItemRightClick(world, player, hand);
+        return super.use(world, player, hand);
     }
 }
