@@ -1,16 +1,10 @@
 package fr.frinn.custommachinery.common.integration.kubejs;
 
-import dev.latvian.kubejs.script.ScriptType;
-import fr.frinn.custommachinery.api.crafting.CraftingResult;
-import fr.frinn.custommachinery.api.crafting.ICraftingContext;
+import dev.latvian.mods.kubejs.script.ScriptType;
 import fr.frinn.custommachinery.common.data.upgrade.MachineUpgrade;
-import fr.frinn.custommachinery.common.integration.kubejs.function.Context;
-import fr.frinn.custommachinery.common.integration.kubejs.function.Result;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class KubeJSIntegration {
 
@@ -23,7 +17,7 @@ public class KubeJSIntegration {
         List<MachineUpgrade> upgrades = new ArrayList<>();
 
         try {
-            upgrades = event.getBuilders().stream().map(CustomMachineJSUpgradeBuilder::build).collect(Collectors.toList());
+            upgrades = event.getBuilders().stream().map(CustomMachineJSUpgradeBuilder::build).toList();
         } catch (Exception e) {
             ScriptType.SERVER.console.warn("Couldn't build machine upgrade", e);
         }
